endif::[]

////
[[release-notes-x.x.x]]
==== x.x.x - YYYY/MM/DD

[float]
===== Breaking changes

[float]
===== Features
* Cool new feature: {pull}2526[#2526]

[float]
===== Bug fixes
////

=== Unreleased

[[release-notes-1.28.5]]
==== 1.28.5 - YYYY/MM/DD

[float]
===== Bug fixes
* Fix runtime attach with some docker images - {pull}2385[#2385]

[[release-notes-1.x]]
=== Java Agent version 1.x

[[release-notes-1.28.4]]
==== 1.28.4 - 2021/12/30

[float]
===== Bug fixes
* Fix `@Traced` annotation to return proper outcome instead of `failed` - {pull}2370[#2370]

[float]
===== Dependency updates
* Update Log4j to 2.12.4 and log4j2-ecs-layout to 1.3.2 - {pull}2378[#2378]

[[release-notes-1.28.3]]
==== 1.28.3 - 2021/12/22

[float]
===== Dependency updates
* Update Log4j to 2.12.3
* Update ecs-logging-java to 1.3.0

[float]
===== Potentially breaking changes
* If the agent cannot discover a service name, it now uses `unknown-java-service` instead of `my-service` - {pull}2325[#2325]

[float]
===== Bug fixes
* Gracefully handle JDBC drivers which don't support `Connection#getCatalog` - {pull}2340[#2340]
* Fix using JVM keystore options for communication with APM Server - {pull}2362[#2362]

[[release-notes-1.28.2]]
==== 1.28.2 - 2021/12/16

[float]
===== Dependency updates
* Update Log4j to 2.12.2

[float]
===== Bug fixes
* Fix module loading errors on J9 JVM - {pull}2341[#2341]
* Fixing log4j configuration error - {pull}2343[#2343]

[[release-notes-1.28.1]]
==== 1.28.1 - 2021/12/10

[float]
===== Security 
* Fix for "Log4Shell" RCE 0-day exploit in log4j https://nvd.nist.gov/vuln/detail/CVE-2021-44228[CVE-2021-44228] - {pull}2332[#2332]

[float]
===== Features
* Added support to selectively enable instrumentations - {pull}2292[#2292]

[float]
===== Bug fixes
* Preferring controller names for Spring MVC transactions, `use_path_as_transaction_name` only as a fallback - {pull}2320[#2320]

[[release-notes-1.28.0]]
==== 1.28.0 - 2021/12/07

[float]
===== Features