@@ -23,7 +23,7 @@ import static io.grpc.MethodDescriptor.generateFullMethodName;
 /**
  */
 @javax.annotation.Generated(
-    value = "by gRPC proto compiler (version 1.43.1)",
+    value = "by gRPC proto compiler (version 1.43.2)",
     comments = "Source: rpc.proto")
 @io.grpc.stub.annotations.GrpcGenerated
 public final class HelloGrpc {
