@@ -26,6 +26,7 @@ endif::[]
 [float]
 ===== Bug fixes
 * Fix runtime attach with some docker images - {pull}2385[#2385]
+* Restore dynamic capability to `log_level` config for plugin loggers - {pull}2384[#2384]
 
 [[release-notes-1.x]]
 === Java Agent version 1.x
